# myspecialmod

./: README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
src/myspecialmod/: myspecialmod.py
