[project]
name = "myspecialmod"
version = "1.3.32"
authors = [
    {name="pySpaceBremen"}
]
description = "Special Module for Python"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
